--- a/not_found.html
+++ b/not_found.html
@@ -6,6 +6,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-     <div id=notfound></div>
+    <h1>Page Not Found</h1>
+    <p>The requested page was not found.</p>
   </body>
 </html>
