--- a/Series/bloodivores.html
+++ b/Series/bloodivores.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="description" content="Bayi Subs are the nexus of premium quality Chinese anime fansubs">
     <meta name="keywords" content="anime, fansub, fansubs, chinese, donghua, guoman, manhua, manga, subs, subtitles">
-    <link rel="icon" type="image/x-icon" href="../../imagens/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title>Bayi Subs - Chinese Anime Fansubs!</title>
-    <link href="../../style.css" rel="stylesheet" type="text/css" media="all">
-    <base target="_parent">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
+
     <h2>Bloodivores [时空囚徒]</h2>
     <p><b>Synopsis:</b> 60 years ago, a strange case of insomnia struck the population, forcing them to stay awake for more than a full week. The victims, completely sleep deprived, all went mad. To cure this illness, a new medicine was produced, but the side effects turned the patients into vampires. Humanity went to war against this new species and triumphed, but some of the vampires managed to survive. Born from a Human and a Vampire, Mi Liu is the ringleader of a bank robbery, arrested, and transferred to a special prison of the National Defense Agency that monitors Vampires. Trying to break free with Anji, Mi Liu is attacked by strange monsters and he finds out that the prison location corresponds to the birthplace of Vampires, the old capital “Blue Town."</p>
     <ol>
@@ -29,6 +30,8 @@
       <li><a href="">MEGA Download</a></li>
     </ol>
     <p>Subbed by karma karma</p>
+
+    <footer>© CurrentYear 八一 :: Last updated: 2016年12月20日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
