--- a/Series/die-now.html
+++ b/Series/die-now.html
@@ -5,31 +5,35 @@
     <meta name="description" content="Bayi Subs are the nexus of premium quality Chinese anime fansubs">
     <meta name="keywords" content="anime, fansub, fansubs, chinese, donghua, guoman, manhua, manga, subs, subtitles">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <title>Bayi Subs - Donghua Fansubs!</title>
-    <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+    <title>Bayi Subs - Chinese Anime Fansubs!</title>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
+
     <h2>Die Now [端脑]</h2>
     <p>Synopsis: What is telencephalon? If one were to derive the surface meaning of the word, telecephalon is a living organ made up of both the left and right brain. In this story, it will be used to describe the conflict of the cosmo structure of the huge system that we call telecephalon cosmo. The story begins from each mysterious murder that progresses to reveal a huge secret of the entire universe. From malicious rumored conspiracies to wars that takes place on the milky way, from opposing human's betrayal to great and noble sacrifices, humans have never been able to understand how outdated, fragile and weak they are and thus humans will then take on the final gamble against its fate.</p>
     <ol>
-      <li><a target="_parent" href="https://mega.nz/#!sB0xkBwI!IDQ4o0X5BHGLemkzM_SHDZKT16F_gYkI7wV6DXdBU6s">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!hN1zUDSb!qujRUAqBpBYRpHNpSg0mdNIW9DemNvm_sIe5ckiQdbM">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!JQsywQoK!qALwuJz7G62GBf8kMymtwVb4QZo7Kl6YyCQOsKo67FY">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!xVElFAzJ!3Q4zadyb8oOPNFGUTSrxpSmA84nFNphommkE0J1An8U">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!xB8zXbCa!NOLi-v5QCiVta2MVf6pkKAdouibLHFqKGQ9kmoi_0P4">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!YZUwWQpA!coljSG04zmCza5F8CthWsv_BCyPjsC9oqYrbpNgLegY">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!kVUE1BqJ!g817QDSrdFme1zP0Fm4DFWsRooX_AB4skUfycFPfZWo">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!FJlWAQbK!xCrzXS2qKFslgeXnaaCNWljZ_sWg61mE6BHusE61ptA">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!EI1STKaI!m-Ayh9vZL58hcdzP9YNbm1aDIwexXETcDtCml_Tpykk">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!dQVwwDBR!w4A9ccWrpTvd2m22A1CwXcg53Aq6lpDJsjznVVT_1a8">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!BY12SSwY!J42CYKUxOkvO_p6PStoc7NvkpPGcXe8D8hE9YOGXTp8">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!RQlWjAba!E1R8z_867eDDZVC3pgiAd87vJ7LdpTulSGabd5i-vHo">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!xMEVjSCQ!9Stm7URfD-0bd6hZcxERlV4Vx-MxC17Ogx3q9hJYtDI">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!IU0WBJAa!eRd8VW46wJGsEXaHQXlwSNlYTeBSiStd5CFktCe0JYc">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!8ZMxlbpa!Z18mGsAonZQyiB76Dblad_OKgMYmY_c0mv5L71_zHCc">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!YJ03xK7Q!3SuleBGMOZ-3Q_ZRZnDCxvJEezoEuTG3kUSs7JBFtDs">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!sB0xkBwI!IDQ4o0X5BHGLemkzM_SHDZKT16F_gYkI7wV6DXdBU6s">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!hN1zUDSb!qujRUAqBpBYRpHNpSg0mdNIW9DemNvm_sIe5ckiQdbM">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!JQsywQoK!qALwuJz7G62GBf8kMymtwVb4QZo7Kl6YyCQOsKo67FY">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!xVElFAzJ!3Q4zadyb8oOPNFGUTSrxpSmA84nFNphommkE0J1An8U">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!xB8zXbCa!NOLi-v5QCiVta2MVf6pkKAdouibLHFqKGQ9kmoi_0P4">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!YZUwWQpA!coljSG04zmCza5F8CthWsv_BCyPjsC9oqYrbpNgLegY">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!kVUE1BqJ!g817QDSrdFme1zP0Fm4DFWsRooX_AB4skUfycFPfZWo">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!FJlWAQbK!xCrzXS2qKFslgeXnaaCNWljZ_sWg61mE6BHusE61ptA">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!EI1STKaI!m-Ayh9vZL58hcdzP9YNbm1aDIwexXETcDtCml_Tpykk">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!dQVwwDBR!w4A9ccWrpTvd2m22A1CwXcg53Aq6lpDJsjznVVT_1a8">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!BY12SSwY!J42CYKUxOkvO_p6PStoc7NvkpPGcXe8D8hE9YOGXTp8">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!RQlWjAba!E1R8z_867eDDZVC3pgiAd87vJ7LdpTulSGabd5i-vHo">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!xMEVjSCQ!9Stm7URfD-0bd6hZcxERlV4Vx-MxC17Ogx3q9hJYtDI">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!IU0WBJAa!eRd8VW46wJGsEXaHQXlwSNlYTeBSiStd5CFktCe0JYc">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!8ZMxlbpa!Z18mGsAonZQyiB76Dblad_OKgMYmY_c0mv5L71_zHCc">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!YJ03xK7Q!3SuleBGMOZ-3Q_ZRZnDCxvJEezoEuTG3kUSs7JBFtDs">MEGA Download</a></li>
     </ol>
+
+    <footer>© CurrentYear 八一 :: Last updated: 2016年12月17日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
