--- a/Series/huyao-xiao-hongniang-yue-hong.html
+++ b/Series/huyao-xiao-hongniang-yue-hong.html
@@ -10,6 +10,8 @@
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
+
     <h2>Huyao Xiao Hongniang: Yue Hong [狐妖小红娘：月红]</h2>[BayiSubs] Huyao Xiao Hongniang - Yue Hong 狐妖小红娘-月红 [720p]
     <p><b>Synopsis:</b> Season three of Fox Spirit Matchmaker.</p>
     <ol>
@@ -28,7 +30,9 @@
       <li><a href="https://mega.nz/#!tdlUSYSC!HMbuFxWhHZBBN2qxCZICBqTW3bBNBWCObzKwAs7RCEQ">MEGA Download</a></li>
     </ol>
     <p><a href="magnet:?xt=urn:btih:4704b37921f1486ff239f9f68662fd9e99d2c0bf&dn=Huyao%20Xiao%20Hongniang%20TV3%20-%20Wangquan%20Fugui%201-13&tr=http%3A%2F%2Fopen.nyaatorrents.info%3A6544%2Fannounce">Batch Magnet (01-13) .. it says "Wangquan Fugui", but it's 3rd season Yue Hong</a></p>
-    <p>Subbed by IdiotProofNinja</p>
+<p>Subbed by <a href=https://www.patreon.com/idiotproofninja>IdiotProofNinja</a></p>
+
+    <footer>© CurrentYear 八一 :: Last updated: 2016年12月29日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
