--- a/Series/rage-comics-ghost-story.html
+++ b/Series/rage-comics-ghost-story.html
@@ -5,10 +5,13 @@
     <meta name="description" content="Bayi Subs are the nexus of premium quality Chinese anime fansubs">
     <meta name="keywords" content="anime, fansub, fansubs, chinese, donghua, guoman, manhua, manga, subs, subtitles">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <title>Bayi Subs - Chinese Anime Fansubs!</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
+
     <h2>Rage Comics: The Ghost Story[暴走恐怖故事]</h2>
     <p><b>Synopsis:</b> Spooky stories with uhm rage comics meme faces, China why REEEEEEEEE</p>
     <ol>
@@ -24,6 +27,8 @@
       <li><a href="https://mega.nz/#!xIt31C5J!fGPA26y0GsW7KrKtLAbhMwriu_OUKWkonQFRmksDwq4">MEGA Download</a></li>
     </ol>
     <p>Subbed by GFearJ</p>
+
+    <footer>© CurrentYear 八一 :: Last updated: 2017年01月05日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
