--- a/Series/twin-spirit-detectives.html
+++ b/Series/twin-spirit-detectives.html
@@ -6,31 +6,40 @@
     <meta name="keywords" content="anime, fansub, fansubs, chinese, donghua, guoman, manhua, manga, subs, subtitles">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title>Bayi Subs - Chinese Anime Fansubs!</title>
-    <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
 
     <h2>Twin Spirit Detectives [双生灵探]</h2>
     <p>Synopsis: Twin detectives Xiaotu and Xiaohu set up a business that specializes in dealing with supernatural occurrences. However, when they investigate what seems to be an ordinary “supernatural” case, a series of bizarre events unfold. To that end, Xiaotu and Xiaohu conquer hardships with every step they take, to clear the hazy path towards the truth. </p>
     <ol>
-      <li><a target="_parent" href="https://mega.nz/#!xVtQCKBZ!_J9qx6l87xRdXSDLFhd7J0j0QbCdODVC3nzbwfnhT1U">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!cBEEAAQB!b2pnv87EeIWOfngdpsYqu8oFgHTzPxrjeAMIdv0KtGg">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!QBd0lB4D!KThThbIT48_P_TDAIzGocE3BZqmYHoGfMA2M05kVHcg">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!1dFhkBQa!hEiARzD5R8eiFYRPwwnC7nxSUyzz-Pktn_hakZWtVnU">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!8Y0xxZiJ!SCHDztaK23pYcoYb9USS6l1Ws4-cHjsQ75eS1ZNeG-0">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!BFMRmQRa!IBB8GA5W3LblVOZWBoYchIPMhgIM9BUEDdZiN7oLXTU">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!cdFGjBjK!ZQz1Cs7q3Wb0b-Npf3K8zup51nsl24qF4ZyeV1Ehahw">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!FYdRwTrS!ZNkn7q5h5Af3GETJwKS97WUnd1ZA9BVpNDNNyaSJXP8">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!EAsiCZCR!rgFLjpSLyjOFwnKxPejaK_wXLrTUrbjVmXQGrFmLBnk">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!xNMEASrQ!FILqOvexRB6PvzQPEK32QHT6Qq4NEjeqJQCjuznHkA0">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!hQdBxIoA!bW6Vs5ESMEhzuVqQyXQoO6aH-zMZjGDXyiPz-9g0GuU">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!1cVkWaoT!KN6qDnMumm0u7AwkKWyv-VeW88fnUYfXhRQwpHKPxxQ">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!MAFh3DoZ!oDP7MmqjHUFEYeSiabgvhcdfTzhm2uy-MjY365UTGXQ">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!5EEQRDhS!-guhPUn6wCcbqhPqT48LPqyIyTKPcjXZ-slSfV9cwsI">MEGA Download</a></li>
-      <li><a target="_parent" href="https://mega.nz/#!VBVnWYYb!xYAIsircD5e9sBRZ46cupPvI8DXXDSGclxcfcMNOFoU">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!xVtQCKBZ!_J9qx6l87xRdXSDLFhd7J0j0QbCdODVC3nzbwfnhT1U">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!cBEEAAQB!b2pnv87EeIWOfngdpsYqu8oFgHTzPxrjeAMIdv0KtGg">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!QBd0lB4D!KThThbIT48_P_TDAIzGocE3BZqmYHoGfMA2M05kVHcg">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!1dFhkBQa!hEiARzD5R8eiFYRPwwnC7nxSUyzz-Pktn_hakZWtVnU">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!8Y0xxZiJ!SCHDztaK23pYcoYb9USS6l1Ws4-cHjsQ75eS1ZNeG-0">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!BFMRmQRa!IBB8GA5W3LblVOZWBoYchIPMhgIM9BUEDdZiN7oLXTU">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!cdFGjBjK!ZQz1Cs7q3Wb0b-Npf3K8zup51nsl24qF4ZyeV1Ehahw">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!FYdRwTrS!ZNkn7q5h5Af3GETJwKS97WUnd1ZA9BVpNDNNyaSJXP8">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!EAsiCZCR!rgFLjpSLyjOFwnKxPejaK_wXLrTUrbjVmXQGrFmLBnk">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!xNMEASrQ!FILqOvexRB6PvzQPEK32QHT6Qq4NEjeqJQCjuznHkA0">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!hQdBxIoA!bW6Vs5ESMEhzuVqQyXQoO6aH-zMZjGDXyiPz-9g0GuU">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!1cVkWaoT!KN6qDnMumm0u7AwkKWyv-VeW88fnUYfXhRQwpHKPxxQ">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!MAFh3DoZ!oDP7MmqjHUFEYeSiabgvhcdfTzhm2uy-MjY365UTGXQ">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!5EEQRDhS!-guhPUn6wCcbqhPqT48LPqyIyTKPcjXZ-slSfV9cwsI">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!VBVnWYYb!xYAIsircD5e9sBRZ46cupPvI8DXXDSGclxcfcMNOFoU">MEGA Download</a></li>
+      <li><a href="https://mega.nz/#!pFlF2RSb!dhRIjis9IKsnBCvSGfTFztipD4RRJdOD7uErwSyA4m8">MEGA Download</a></li>
+      <li><a href="">MEGA Download</a></li>
+      <li><a href="">MEGA Download</a></li>
+      <li><a href="">MEGA Download</a></li>
+      <li><a href="">MEGA Download</a></li>
     </ol>
+    <p><a href="https://9anime.to/watch/twin-spirit-detectives.49rx/4q7wqk">Stream series at 9Anime</a></p>
+    <p>Subbed by GFearJ</p>
 
+    <footer>© CurrentYear 八一 :: Last updated: 2017年01月14日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
