--- a/Series/huyao-xiao-hongniang-wangquan-fugui.html
+++ b/Series/huyao-xiao-hongniang-wangquan-fugui.html
@@ -10,6 +10,8 @@
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
+
     <h2>Huyao Xiao Hongniang: Wangquan Fugui [狐妖小红娘：王权富贵]</h2>
     <p><b>Synopsis:</b> Season two of Fox Spirit Matchmaker.</p>
     <ol>
@@ -29,8 +31,9 @@
       <li><a href="https://mega.nz/#!1Ns1yTBI!rKFaid6sLvCgkSG8jEV0JizEvtv0-8eM1ertF3CA_4g">MEGA Download</a></li>
     </ol>
     <p><a href="magnet:?xt=urn:btih:88554fba692b31e2abea6391d8bfcdbed6d5e83f&dn=Huyao%20Xiao%20Hongniang%20TV2%20-%20Yue%20Hong%201-14&tr=http%3A%2F%2Fopen.nyaatorrents.info%3A6544%2Fannounce">Batch Magnet (01-14)</a> .. it says "Yue Hong", but it's 2nd season Wangquan Fugui</p>
-    <p>Subbed by IdiotProofNinja</p>
+<p>Subbed by <a href=https://www.patreon.com/idiotproofninja>IdiotProofNinja</a></p>
 
+    <footer>© CurrentYear 八一 :: Last updated: 2016年12月29日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
