--- a/Series/huyao-xiao-hongniang.html
+++ b/Series/huyao-xiao-hongniang.html
@@ -10,8 +10,9 @@
   </head>
   
   <body>
+    <h1><a href="index.html">Bayi Subs 八一</a></h1>
 
-    <h2>Huyao Xiao Hongniang [狐药小红娘]</h2>
+    <h2>Huyao Xiao Hongniang [狐妖小红娘]</h2>
     <p><b>Synopsis:</b> Season one of Fox Spirit Matchmaker</p>
     <ol>
       <li><a href="https://mega.nz/#!oR9k1YxQ!-kfTxZN55UDMHVxQWyKjHRGqiXISHGlt9Z9Mj0fI-0E">MEGA Download</a></li>
@@ -29,7 +30,9 @@
       <li><a href="https://mega.nz/#!oRElzTpY!t8Ixg-sVHXGU_42vxjBzBvIRcO4G4-HQ-_UX23YNJ9w">MEGA Download</a></li>
     </ol>
     <p><a href="magnet:?xt=urn:btih:fb28fbbf3e68e45dd88a603352b28b54303876e6&dn=Huyao%20Xiao%20Hongniang%20TV1%201-13&tr=http%3A%2F%2Fopen.nyaatorrents.info%3A6544%2Fannounce">Batch Magnet (01-13)</a></p>
-    <p>Subbed by IdiotProofNinja</p>
+    <p>Subbed by <a href=https://www.patreon.com/idiotproofninja>IdiotProofNinja</a></p>
+
+    <footer>© CurrentYear 八一 :: Last updated: 2016年12月29日 :: Association with organizations such as PLA are coincidential.</footer>
   
   </body>
 </html>
